# AI-resume-roaster

./: main.py  project 1.py  pyproject.toml  resume project.py
